Enabled app to handle 20MB requests, post image works correctly